--- a/helper.css
+++ b/helper.css
@@ -1,21 +1,31 @@
+header,
+footer {
+    text-align: center;
+}
+
 .aside-left {
-    width: 30%;
-    padding-left: 15px;
-    margin-left: 15px;
-    float: left;
+    width: 10vw;
+    padding: 225px 15px 100px;
+    margin-left: 0px;
+    display: inline-block;
     font-style: italic;
     background-color: lightgray;
 }
 
 .aside-right {
-    width: 30%;
-    padding-left: 15px;
-    margin-left: 15px;
-    float: right;
+    width: 9vw;
+    padding: 150px 15px 100px;
+    display: inline-block;
     font-style: italic;
     background-color: lightgray;
 }
 
-nav {
-    display: block;
+section {
+    width: 72vw;
+    display: inline-block;
+    padding: 15px 15px 15px;
+}
+
+article {
+    text-align: justify;
 }
